--- a/package.json
+++ b/package.json
@@ -9,9 +9,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "@supabase/supabase-js": "^2.39.3"
-  },
-  "devDependencies": {
+    "@supabase/supabase-js": "^2.39.3",
     "vite": "^5.0.12"
   }
 }
